k8s/dev-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: authentication-service
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
        - name: authentication-service
          image: authentication-service:0.5.0-SNAPSHOT
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "./"
              name: authentication-keys
      volumes:
        - name: authentication-keys
          configMap:
            name: authentication-keys
            items:
              - key: private.key
                path: /keys/private.key
              - key: public.key
                path: /keys/public.key
      imagePullSecrets:
        - name: byteterm-docker-registry
