k8s/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentication-service-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.org/client-max-body-size: "0"
spec:
  rules:
    - host: "devaccounts.vogeez.net"
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: authentication-service
                port:
                  number: 8080
            path: /
